--- a/src/app/admin/orders/components/print-kot/print-kot.component.html
+++ b/src/app/admin/orders/components/print-kot/print-kot.component.html
@@ -70,7 +70,7 @@
                 <tr>
                     <td class="description">{{ item.productName }} {{item.advancedPriceTitle ? '('+ item.advancedPriceTitle +')' : ''}}</td>
                     <td class="price">{{item.isParcel ? 'PARCEL':''}}</td>
-                    <td class="quantity">{{ item.quantity }}</td>
+                    <td class="quantity">{{ item.kot_pending }}</td>
                 </tr>
             </ng-container>
         </tbody>
