--- a/src/app/admin/settings/branches-setting/update-branch/update-branch.component.html
+++ b/src/app/admin/settings/branches-setting/update-branch/update-branch.component.html
@@ -42,6 +42,12 @@
                     </div>
                     <div class="col-6">
                         <mat-form-field  appearance="fill" class="w-100 mb-5">
+                            <mat-label>GST Number</mat-label>
+                            <input type="text" formControlName="gstNumber" matInput>
+                        </mat-form-field>
+                    </div>
+                    <div class="col-6">
+                        <mat-form-field  appearance="fill" class="w-100 mb-5">
                             <mat-label>Tax Percentage</mat-label>
                             <input type="text" formControlName="taxPercent" matInput>
                         </mat-form-field>
