--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -23,6 +23,7 @@
                             <mat-menu #moreOption="matMenu">
                                 <button mat-menu-item type="button" [routerLink]="['/admin/user/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
                                 <button mat-menu-item type="button" (click)="deleteUser(item)"><mat-icon>delete</mat-icon>Delete</button>
+                                <button mat-menu-item type="button" (click)="changeOtherUserPassword(item)"><mat-icon>settings</mat-icon>Change Password</button>
                             </mat-menu>
                         </td>
                         <td>
