--- a/src/app/admin/orders/components/new-order/new-order.component.html
+++ b/src/app/admin/orders/components/new-order/new-order.component.html
@@ -211,17 +211,17 @@
                                 <div class="row mt-15">
                                     <div class="col-md-6 col-12">
                                         <mat-form-field appearance="outline" class="w-100">
-                                            <mat-label>Customer Name</mat-label>
-                                            <input formControlName="customerName" matInput (change)="isDirty=true">
-                                        </mat-form-field>
-                                    </div>
-                                    <div class="col-md-6 col-12">
-                                        <mat-form-field appearance="outline" class="w-100">
                                             <mat-label>Mobile Number</mat-label>
                                             <input formControlName="mobileNumber" matInput (change)="isDirty=true">
                                         </mat-form-field>
                                     </div>
-                                    <div class="col-12">
+                                    <div class="col-md-6 col-12" [hidden]="!form.get('mobileNumber').value">
+                                        <mat-form-field appearance="outline" class="w-100">
+                                            <mat-label>Customer Name</mat-label>
+                                            <input formControlName="customerName" matInput (change)="isDirty=true">
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-12" [hidden]="!form.get('mobileNumber').value">
                                         <mat-form-field appearance="outline" class="w-100">
                                             <mat-label>Customer Address</mat-label>
                                             <textarea formControlName="customerAddress" matInput (change)="isDirty=true"></textarea>
@@ -301,7 +301,11 @@
                                     </div>
                                     <div class="billing_strip" *ngIf="form.get('discountValue').value && form.get('discountValue').value > 0">
                                         <p class="title">Discount</p>
-                                        <span class="value_section">{{ form.get('discountValue').value | currency }}</span>
+                                        <span class="value_section">{{ (-1 * form.get('discountValue').value) | currency }}</span>
+                                    </div>
+                                    <div class="billing_strip" *ngIf="form.get('roundOfAmount').value && form.get('roundOfAmount').value > 0">
+                                        <p class="title">Round Off</p>
+                                        <span class="value_section">{{ (-1 * form.get('roundOfAmount').value) | currency }}</span>
                                     </div>
                                     <div class="billing_strip totalAmountText">
                                         <p class="title">Grand Total</p>
