--- a/src/app/admin/account-management/account-master/inventory-manager/inventory-manager.component.html
+++ b/src/app/admin/account-management/account-master/inventory-manager/inventory-manager.component.html
@@ -42,16 +42,18 @@
                         <td>
                             <!-- <button *ngIf="!item.id || editInventoryIndex == i" mat-icon-button class="small_icon_btn mr-2" type="button" (click)="saveInventory(item)"
                                 color="primary">
-                                <mat-icon>save</mat-icon>
+                                <img src="assets/images/icons/SAVE.svg" alt="" class="icon_img">
                             </button> -->
                             <button mat-icon-button class="small_icon_btn mr-2" color="primary" type="button" [routerLink]="['/admin/account-management/masters/inventory/update/'+item.id]">
-                                <mat-icon>edit</mat-icon>
+                                <!-- <mat-icon>edit</mat-icon> -->
+                                <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                             </button>
                             <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="deleteInventory(i)">
-                                <mat-icon>delete_forever</mat-icon>
+                                <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                             <!-- <button *ngIf="!item.id || (item.id && editInventoryIndex == i)" mat-icon-button class="small_icon_btn" color="warn" (click)="onCancelEdit()">
-                                <mat-icon>close</mat-icon>
+                                <img src="assets/images/icons/CLOSE.svg" alt="" class="icon_img">
                             </button> -->
                         </td>
                     </tr>
