--- a/src/app/admin/orders/components/add-order-item/add-order-item.component.html
+++ b/src/app/admin/orders/components/add-order-item/add-order-item.component.html
@@ -1,5 +1,5 @@
 <h1>Order Items
-    <button mat-icon-button (click)="close()"><mat-icon>close</mat-icon></button>
+    <button mat-icon-button (click)="close()"><img src="assets/images/icons/CLOSE.svg" alt="" class="icon_img"></button>
 </h1>
 <form [formGroup]="form">
     <div class="mt-5">
