--- a/src/app/admin/orders/components/order-lists/order-lists.component.html
+++ b/src/app/admin/orders/components/order-lists/order-lists.component.html
@@ -54,7 +54,7 @@
                         </td>
                         <td>
                             <button mat-icon-button type="button" [routerLink]="['/admin/order/update/'+item.id]">
-                                <mat-icon>create</mat-icon>
+                                <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                             </button>
                         </td>
                         <td>
