--- a/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
+++ b/src/app/admin/report-manager/item-sale-report/item-sale-report.component.html
@@ -21,7 +21,7 @@
         <div class="col-xl-auto col-md-2 col-sm-6 col-12">
             <button mat-raised-button class="mr-10" type="button" (click)="getOrderItemSalesList($event)" color="primary">Generate</button>
             <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
-                <mat-icon>get_app</mat-icon>
+                <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
             </button>
         </div>
 
