--- a/src/app/admin/settings/add-table-manager/add-table-manager.component.html
+++ b/src/app/admin/settings/add-table-manager/add-table-manager.component.html
@@ -23,7 +23,7 @@
             <ng-container matColumnDef="action">
                 <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
                 <td mat-cell *matCellDef="let element; let i=index;"> 
-                    <button type="button" mat-icon-button color="warn" (click)="removeTable(i)"><mat-icon>delete</mat-icon></button>
+                    <button type="button" mat-icon-button color="warn" (click)="removeTable(i)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"></button>
                 </td>
             </ng-container>
     
