--- a/src/app/admin/user/attendance/update-attandance/update-attandance.component.html
+++ b/src/app/admin/user/attendance/update-attandance/update-attandance.component.html
@@ -6,7 +6,7 @@
         <div class="header_wrapper mb-30 d-flex align-items-center justify-content-between">
             <h3 class="mb-0 font-weight-600 text-uppercase">Attendance Update</h3>
             <button mat-icon-button (click)="closeDilog()">
-                <mat-icon>close</mat-icon>
+                <img src="assets/images/icons/CLOSE.svg" alt="" class="icon_img">
             </button>
         </div>
     </div>
