--- a/src/app/admin/account-management/account-master/ledger-manager/ledger-manager.component.html
+++ b/src/app/admin/account-management/account-master/ledger-manager/ledger-manager.component.html
@@ -65,16 +65,18 @@
                         <td>
                             <button *ngIf="!item.id || editLedgerIndex == i" mat-icon-button class="small_icon_btn mr-2" type="button" (click)="saveLedger(item)"
                                 color="primary">
-                                <mat-icon>save</mat-icon>
+                                <img src="assets/images/icons/SAVE.svg" alt="" class="icon_img">
                             </button>
                             <button *ngIf="item.id && editLedgerIndex != i" mat-icon-button class="small_icon_btn mr-2" color="primary" type="button" (click)="onLedgerEdit(i)">
-                                <mat-icon>edit</mat-icon>
+                                <!-- <mat-icon>edit</mat-icon> -->
+                                <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                             </button>
                             <button *ngIf="item.id && editLedgerIndex != i" mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="deleteLedger(i)">
-                                <mat-icon>delete_forever</mat-icon>
+                                <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                             <button *ngIf="!item.id || (item.id && editLedgerIndex == i)" mat-icon-button class="small_icon_btn" color="warn" (click)="onCancelEdit()">
-                                <mat-icon>close</mat-icon>
+                                <img src="assets/images/icons/CLOSE.svg" alt="" class="icon_img">
                             </button>
                         </td>
                     </tr>
