--- a/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
+++ b/src/app/admin/account-management/new-transaction/new-payment/new-payment.component.html
@@ -33,7 +33,7 @@
                         <span class="underline"></span>
                     </div> -->
                     <!-- <button mat-icon-button class="small_icon_btn ml-10">
-                        <mat-icon>create</mat-icon>
+                        <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                     </button> -->
                 </div>
             </div>
@@ -45,7 +45,9 @@
         <div class="d-flex align-items-center justify-content-between mt-20">
             <h3 class="title_h3 font-weight-500 mb-5 text-primary">Summary</h3>
             <button type="button" (click)="_transact.addAnotherAccount()" mat-button>
-                <mat-icon>add</mat-icon> Add
+                <!-- <img src="assets/images/icons/ADD.svg" alt="" class="icon_img"> -->
+                <img src="assets/images/icons/ADD.svg" alt="" class="icon_img">
+                 Add
             </button>
         </div>
         <div class="item_table_outer mt-10">
@@ -77,7 +79,8 @@
                                         <tr [formGroupName]="i">
                                             <td class="ew-50">
                                                 <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="_transact.onDeleteAccount(i)">
-                                                    <mat-icon>delete_forever</mat-icon>
+                                                    <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
+                                                    <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                                                 </button>
                                             </td>
                                             <td>
