--- a/src/app/admin/account-management/new-transaction/new-sales/new-sales.component.html
+++ b/src/app/admin/account-management/new-transaction/new-sales/new-sales.component.html
@@ -33,7 +33,7 @@
                         <span class="underline"></span>
                     </div> -->
                     <!-- <button mat-icon-button class="small_icon_btn ml-10">
-                        <mat-icon>create</mat-icon>
+                        <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                     </button> -->
                 </div>
             </div>
@@ -44,7 +44,7 @@
     <div class="d-flex align-items-center justify-content-between">
         <h3 class="title_h3 font-weight-500 mb-5 text-primary">Inventory Items</h3>
         <button type="button" (click)="_transact.addAnotherItem()" mat-button>
-            <mat-icon>add</mat-icon> Add
+            <img src="assets/images/icons/ADD.svg" alt="" class="icon_img"> Add
         </button>
     </div>
     <div class="item_table_outer mt-10">
@@ -64,7 +64,8 @@
                         <tr *ngIf="!item.get('deletedFlag').value" [formGroupName]="i">
                             <td class="ew-50">
                                 <button type="button" (click)="_transact.onDeleteItem(i)" mat-icon-button class="small_icon_btn" color="warn">
-                                    <mat-icon>delete_forever</mat-icon>
+                                    <!-- <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> -->
+                                    <img src="assets/images/icons/EDIT.svg" alt="" class="icon_img">
                                 </button>
                             </td>
                             <td>
@@ -137,7 +138,7 @@
                     <!-- <tr>
                         <td>
                             <button mat-icon-button class="small_icon_btn" color="warn">
-                                <mat-icon>delete_forever</mat-icon>
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                         </td>
                         <td>Food itemss</td>
@@ -148,7 +149,7 @@
                     <tr>
                         <td>
                             <button mat-icon-button color="warn" class="small_icon_btn">
-                                <mat-icon>delete_forever</mat-icon>
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                         </td>
                         <td>
@@ -181,7 +182,7 @@
                     <tr>
                         <td>
                             <button mat-icon-button class="small_icon_btn" color="warn">
-                                <mat-icon>delete_forever</mat-icon>
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                         </td>
                         <td>
@@ -203,7 +204,7 @@
                     <tr>
                         <td>
                             <button mat-icon-button class="small_icon_btn" color="warn">
-                                <mat-icon>delete_forever</mat-icon>
+                                <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                             </button>
                         </td>
                         <td><span class="status_chip inactive">Inactive</span></td>
@@ -229,7 +230,7 @@
         <div class="d-flex align-items-center justify-content-between mt-20">
             <h3 class="title_h3 font-weight-500 mb-5 text-primary">Taxes and Expenses</h3>
             <button type="button" (click)="_transact.addAnotherAccount()" mat-button>
-                <mat-icon>add</mat-icon> Add
+                <img src="assets/images/icons/ADD.svg" alt="" class="icon_img"> Add
             </button>
         </div>
         <div class="item_table_outer mt-10">
@@ -261,7 +262,7 @@
                                         <tr [formGroupName]="i">
                                             <td class="ew-50">
                                                 <button mat-icon-button class="small_icon_btn" color="warn" type="button" (click)="_transact.onDeleteAccount(i)">
-                                                    <mat-icon>delete_forever</mat-icon>
+                                                    <img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">
                                                 </button>
                                             </td>
                                             <td>
