--- a/src/app/admin/layout/component/change-password/change-password.component.html
+++ b/src/app/admin/layout/component/change-password/change-password.component.html
@@ -5,7 +5,9 @@
             <mat-label>Old Password</mat-label>
             <input matInput [type]="oldhide ? 'password' : 'text'" formControlName="oldPassword">
             <button mat-icon-button matSuffix type="button" (click)="oldhide = !oldhide">
-                <mat-icon>{{oldhide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <!-- <mat-icon>{{oldhide ? 'visibility_off' : 'visibility'}}</mat-icon> -->
+                <img *ngIf="!oldhide" src="assets/images/icons/EYE_OPEN.svg" alt="">
+                <img *ngIf="oldhide" src="assets/images/icons/EYE_CLOSED.svg" alt="">
             </button>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100 mb-10">
@@ -13,11 +15,13 @@
             <input matInput [type]="hide ? 'password' : 'text'" formControlName="password">
             <mat-error *ngIf="form.get('password').hasError('required')">Password is required</mat-error>
             <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                <!-- <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon> -->
+                <img *ngIf="!hide" src="assets/images/icons/EYE_OPEN.svg" alt="">
+                <img *ngIf="hide" src="assets/images/icons/EYE_CLOSED.svg" alt="">
             </button>
             <mat-error *ngIf="!form.get('password').hasError('required') && form.get('password').hasError('password')">
                 Format doesn't match!. 
-                <span matTooltip="Minimum 8 characters required. &#13; Should include one Uppercase and one lowercase letters." matTooltipClass="goresto_tooltip"><mat-icon>info</mat-icon></span>
+                <span matTooltip="Minimum 8 characters required. &#13; Should include one Uppercase and one lowercase letters." matTooltipClass="goresto_tooltip"><img src="assets/images/icons/INFO.svg" alt="" class="icon_img"></span>
             </mat-error>
         </mat-form-field>
         <mat-form-field appearance="outline" class="w-100 mb-10">
