--- a/src/app/admin/layout/sidebar/sidebar.component.html
+++ b/src/app/admin/layout/sidebar/sidebar.component.html
@@ -4,37 +4,38 @@
         <li routerLinkActive="active">
 
             <a href="javascript:;" routerLink="/admin/dashboard" matRipple [matRippleUnbounded]="false">
-                <mat-icon>storage</mat-icon> <span class="d-inline-block ml-3">Dashboard</span></a>
+                <img src="assets/images/icons/DASHBOARD.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Dashboard</span></a>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;" routerLink="/admin/order" matRipple [matRippleUnbounded]="false">
-                <mat-icon>fact_check</mat-icon> <span class="d-inline-block ml-3">Orders</span>
+                <img src="assets/images/icons/list.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Orders</span>
             </a>
         </li>
         <li routerLinkActive="active" *ngIf=" this._serv.getPermission('products', 'read')">
             <a href="javascript:;" routerLink="/admin/products" matRipple [matRippleUnbounded]="false">
-                <mat-icon>add_box</mat-icon> <span class="d-inline-block ml-3">Products</span>
+                <img src="assets/images/icons/add_squar_fill.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Products</span>
             </a>
         </li>
         <li routerLinkActive="active">
             <a href="javascript:;" routerLink="/admin/tables" matRipple [matRippleUnbounded]="false">
-                <mat-icon>view_module</mat-icon> <span class="d-inline-block ml-3">Tables</span>
+                <img src="assets/images/icons/TABLE.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Tables</span>
             </a>
         </li>
         <li routerLinkActive="active" *ngIf=" this._serv.getPermission('order-report', 'full')">
             <a href="javascript:;" routerLink="/admin/reports" matRipple [matRippleUnbounded]="false">
-                <mat-icon>pie_chart</mat-icon> <span class="d-inline-block ml-3"> Reports</span>
+                <img src="assets/images/icons/PIECHART.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3"> Reports</span>
             </a>
         </li>
         <li routerLinkActive="active" *ngIf=" this._serv.getPermission('users', 'read')">
             <a href="javascript:;" routerLink="/admin/user" matRipple [matRippleUnbounded]="false">
-                <mat-icon>person</mat-icon> <span class="d-inline-block ml-3">Users</span>
+                <img src="assets/images/icons/USER.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Users</span>
             </a>
         </li>
         <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('setting-menu', 'read')">
             <a href="javascript:;" routerLink="/admin/settings" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
-                <mat-icon>settings</mat-icon> <span class="d-inline-block ml-3">Setting </span>
-                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
+                <img src="assets/images/icons/SETTINGS.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Setting </span>
+                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow">
+                <!-- <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon> -->
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active" *ngIf=" this._serv.getPermission('company', 'read')">
@@ -61,8 +62,9 @@
         </li>
         <li routerLinkActive="subOpen" class="have_submenu" *ngIf=" this._serv.getPermission('accounting-menu', 'full')">
             <a href="javascript:;" routerLink="/admin/account-management" (click)="openSubmenu()" matRipple [matRippleUnbounded]="false">
-                <mat-icon>addchart</mat-icon> <span class="d-inline-block ml-3">Accounts </span>
-                <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon>
+                <img src="assets/images/icons/BARGRAPH.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Accounts </span>
+                <img src="assets/images/icons/ARROWDOWN.svg" alt="" class="icon_img ml-auto right_arrow">
+                <!-- <mat-icon class="ml-auto right_arrow">keyboard_arrow_down</mat-icon> -->
             </a>
             <ul routerLinkActive="active" class="list-unlisted submenu-Wrapper">
                 <li routerLinkActive="active">
@@ -127,7 +129,7 @@
         </li> -->
         <li>
             <a href="javascript:;" matRipple [matRippleUnbounded]="false" (click)="signOut()">
-                <mat-icon>power_settings_new</mat-icon> <span class="d-inline-block ml-3">Sign Out</span>
+                <img src="assets/images/icons/LOGOUT.svg" alt="" class="icon_img"> <span class="d-inline-block ml-3">Sign Out</span>
             </a>
         </li>
     </ul>
