--- a/src/app/admin/orders/components/serve-order-item/serve-order-item.component.html
+++ b/src/app/admin/orders/components/serve-order-item/serve-order-item.component.html
@@ -1,7 +1,7 @@
 <div class="mb-20 header_bar d-flex align-lign-items-center justify-content-between">
     <h1 class="mb-0 font-weight-600">Serve Items</h1>
     <button mat-icon-button (click)="closeItem()">
-        <mat-icon>close</mat-icon>
+        <img src="assets/images/icons/CLOSE.svg" alt="" class="icon_img">
     </button>
 </div>
 
