--- a/src/app/admin/products/product-list/product-list.component.html
+++ b/src/app/admin/products/product-list/product-list.component.html
@@ -25,11 +25,11 @@
                     <tr *ngIf=" this._serv.getPermission('products', 'full')">
                         <td>
                             <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                                <mat-icon>more_vert</mat-icon>
+                                <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                             </button>
                             <mat-menu #moreOption="matMenu">
-                                <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
-                                <button mat-menu-item type="button" (click)="deleteProduct(item)"><mat-icon>delete</mat-icon> Delete</button>
+                                <button mat-menu-item type="button" [routerLink]="['/admin/products/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                                <button mat-menu-item type="button" (click)="deleteProduct(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> Delete</button>
                             </mat-menu>
                         </td>
                         <td>
