--- a/src/app/admin/report-manager/order-report/order-report.component.html
+++ b/src/app/admin/report-manager/order-report/order-report.component.html
@@ -59,7 +59,7 @@
         <div class="col-xl-auto col-md-2 col-sm-6 col-12">
             <button mat-raised-button class="mr-10" type="button" (click)="getOrderList($event)" color="primary">Generate</button>
             <button mat-mini-fab color="primary" type="button" class="ml-auto" (click)="exportToExcel()">
-                <mat-icon>get_app</mat-icon>
+                <img src="assets/images/icons/DOWNLOAD.svg" alt="" class="icon_img">
             </button>
         </div>
 
@@ -83,11 +83,11 @@
                 <tr *ngFor="let item of dataSource; let i =index">
                     <!-- <td>
                                         <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                                            <mat-icon>more_vert</mat-icon>
+                                            <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                                         </button>
                                         <mat-menu #moreOption="matMenu">
-                                            <button mat-menu-item type="button" [routerLink]="['/admin/order/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
-                                            <button mat-menu-item type="button"><mat-icon>delete</mat-icon>Delete</button>
+                                            <button mat-menu-item type="button" [routerLink]="['/admin/order/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                                            <button mat-menu-item type="button"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
                                         </mat-menu>
                                     </td> -->
                     <td>
