--- a/src/app/admin/settings/categories-setting/categories-list/categories-list.component.html
+++ b/src/app/admin/settings/categories-setting/categories-list/categories-list.component.html
@@ -15,11 +15,11 @@
                     <tr>
                         <td>
                             <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                                <mat-icon>more_vert</mat-icon>
+                                <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                             </button>
                             <mat-menu #moreOption="matMenu">
-                                <button mat-menu-item type="button" [routerLink]="['/admin/settings/categories/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
-                                <button mat-menu-item type="button" (click)="deleteCategory(item)"><mat-icon>delete</mat-icon>Delete</button>
+                                <button mat-menu-item type="button" [routerLink]="['/admin/settings/categories/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                                <button mat-menu-item type="button" (click)="deleteCategory(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
                             </mat-menu>
                         </td>
                         <td>
