--- a/src/app/admin/settings/feedback-setting/feedback-setting.component.html
+++ b/src/app/admin/settings/feedback-setting/feedback-setting.component.html
@@ -11,11 +11,11 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                    <mat-icon>more_vert</mat-icon>
+                    <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                 </button>
                     <mat-menu #moreOption="matMenu" yPosition="above">
-                    <button mat-menu-item><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item><mat-icon>delete</mat-icon>Delete</button>
+                    <button mat-menu-item><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                    <button mat-menu-item><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
