--- a/src/app/admin/settings/order-setting/order-setting.component.html
+++ b/src/app/admin/settings/order-setting/order-setting.component.html
@@ -11,11 +11,11 @@
             <th mat-header-cell *matHeaderCellDef class="ew-100"> Action </th>
             <td mat-cell *matCellDef="let element"> 
                 <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                    <mat-icon>more_vert</mat-icon>
+                    <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                 </button>
                     <mat-menu #moreOption="matMenu">
-                    <button mat-menu-item type="button" [routerLink]="['/admin/settings/order-type/update/'+element.id]"><mat-icon>create</mat-icon> Edit</button>
-                    <button mat-menu-item type="button" (click)="deleteOderType(element)"><mat-icon>delete</mat-icon> Delete</button>
+                    <button mat-menu-item type="button" [routerLink]="['/admin/settings/order-type/update/'+element.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                    <button mat-menu-item type="button" (click)="deleteOderType(element)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img"> Delete</button>
                 </mat-menu>
             </td>
         </ng-container>
