--- a/src/app/admin/user/user-list/user-list.component.html
+++ b/src/app/admin/user/user-list/user-list.component.html
@@ -18,12 +18,12 @@
                     <tr *ngIf="loginUserDetail?.user_id != item.id">
                         <td  *ngIf=" this._serv.getPermission('users', 'full')">
                             <button mat-icon-button [matMenuTriggerFor]="moreOption">
-                                <mat-icon>more_vert</mat-icon>
+                                <img src="assets/images/icons/MORE.svg" alt="" class="icon_img">
                             </button>
                             <mat-menu #moreOption="matMenu">
-                                <button mat-menu-item type="button" [routerLink]="['/admin/user/update/'+item.id]"><mat-icon>create</mat-icon> Edit</button>
-                                <button mat-menu-item type="button" (click)="deleteUser(item)"><mat-icon>delete</mat-icon>Delete</button>
-                                <button mat-menu-item type="button" (click)="changeOtherUserPassword(item)"><mat-icon>settings</mat-icon>Change Password</button>
+                                <button mat-menu-item type="button" [routerLink]="['/admin/user/update/'+item.id]"><img src="assets/images/icons/EDIT.svg" alt="" class="icon_img"> Edit</button>
+                                <button mat-menu-item type="button" (click)="deleteUser(item)"><img src="assets/images/icons/TRASHBIN.svg" alt="" class="icon_img">Delete</button>
+                                <button mat-menu-item type="button" (click)="changeOtherUserPassword(item)"><img src="assets/images/icons/SETTINGS.svg" alt="" class="icon_img">Change Password</button>
                             </mat-menu>
                         </td>
                         <td>
