--- a/src/app/guest/signin/signin.component.html
+++ b/src/app/guest/signin/signin.component.html
@@ -15,7 +15,9 @@
                     <mat-label>Password</mat-label>
                     <input matInput formControlName="password" [type]="hide ? 'password' : 'text'" placeholder="" name="loginpassword" id="loginPassword">
                     <button mat-icon-button matSuffix type="button" (click)="hide = !hide">
-                        <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+                        <!-- <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon> -->
+                        <img *ngIf="!hide" src="assets/images/icons/EYE_OPEN.svg" alt="">
+                        <img *ngIf="hide" src="assets/images/icons/EYE_CLOSED.svg" alt="">
                     </button>
                 </mat-form-field>
             </mat-card-content>
